# openCV-Photo-Swap

./: CMakeLists.txt  Doxyfile  README.md  main.cpp  swapper.cpp  swapper.hpp
include/Swapper/: swapper.hpp
src/: evenC_evenR.cpp  evenC_oddR.cpp  oddC_evenR.cpp  oddC_oddR.cpp  swapper.cpp
